# sage

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: Makefile  api.rst  conf.py  getting-started.rst  index.rst  intro.rst  references.rst
docs/_static/: figure1  figure2
docs/api/: engine.rst  interface.rst  seatingplan.rst  student.rst
docs/references/: bibliography.rst  webography.rst
sage/: __init__.py  engine.py  interface.py  seatingplan.py  student.py
tests/: test_empty.csv  test_malformed_1.csv  user_relationships.csv  user_table_12.csv  user_table_15.csv  user_table_16.csv  user_table_36.csv  user_table_36_soft.csv  user_table_5.csv  user_table_6.csv  user_table_9.csv
