[tool.poetry]
name = "sageproject"
version = "0.1.0"
description = "Générateur de plan de classe intelligent"
authors = ["Jeff LANCE <jeff.lance@mala.fr>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "sage"}]

[tool.poetry.dependencies]
python = "^3.12"
colorclass = "2.2.2"
pandas = "2.2.3"
terminaltables = "3.1.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
